fix the overflow of the assistant page

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -9,10 +9,6 @@
   font-style: normal;
 }
 
-body {
-  overflow: hidden;
-}
-
 html,
 body,
 #root {
